# paq1-lib-cqrs

./: Cargo.toml
paq1_cqrs_core/: Cargo.toml
paq1_cqrs_core/src/: lib.rs  one_step_engine.rs
paq1_cqrs_core/src/handlers/: data.rs  mod.rs  resolver.rs
paq1_cqrs_core/src/reducer/: mod.rs
paq1_cqrs_infra/: Cargo.toml
paq1_cqrs_infra/src/: default_one_step_engine.rs  lib.rs
src/: command_handlers.rs  engine.rs  lib.rs  reducer.rs
