[workspace]
resolver = "2"
members = ["paq1_cqrs_core", "paq1_cqrs_infra"]

[workspace.dependencies]
#### basics
paq1-lib-error-handler = { git = "https://github.com/paq1/paq1-lib-error-handler.git", branch = "master", features = ["combine"] }
async-trait = "0.1.80"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
#### dbs
paq1_storage_core = { git = "https://github.com/paq1/paq1-lib-storage.git", branch = "master", version = "0.4.0"}
paq1_storage_infra = { git = "https://github.com/paq1/paq1-lib-storage.git", branch = "master", version = "0.4.0"}
#### security
paq1_authn_core = { git = "https://github.com/paq1/paq1-lib-authn.git", branch = "master", version = "0.1.2" }