[package]
name = "paq1_cqrs_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
#### crates
paq1_cqrs_core = { path = "../paq1_cqrs_core" }
#### basics
paq1-lib-error-handler = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
#### dbs
paq1_storage_core = { workspace = true }
#### security
paq1_authn_core = { workspace = true }